# NeoVis

./: CMakeLists.txt  Makefile  README.md  main.c  make.bat  style-guide.md
cmake/: FindTurboJPEG.cmake
src/: CMakeLists.txt  common.c  common.h  image.h  io.c  io.h  jpgio.c  jpgio.h  main.c  nodes.c  nodes.h
src/common/: CMakeLists.txt  common.c  common.h
src/image/: CMakeLists.txt  image.c  image.h
src/io/: CMakeLists.txt  io.c  io.h
src/io/jpgio/: CMakeLists.txt  jpgio.c
src/jpgio/: CMakeLists.txt  jpgio.h
src/nodes/: CMakeLists.txt  nodes.c  nodes.h
src/nodes/add/: add.c  add.h
